# face-attendance

./: .env.example  .gitignore  README.md  app.py  config.py  enroll.py  logger.py  monitor.py  pyproject.toml  requirements.txt
templates/: index.html
tests/: conftest.py  test_app.py  test_crashfixes.py  test_e2e.py  test_enroll.py  test_logger.py
